--- a/SnareHelpDesk/View/TitleCollectionViewCell.xib
+++ b/SnareHelpDesk/View/TitleCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,28 +11,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TitleCollectionViewCell" customModule="SnareHelpDesk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="128" height="157"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="157"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="do7-MC-3jd">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Vx-dU-ucm">
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="157"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="do7-MC-3jd">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7p2-7W-1qJ">
+                                <rect key="frame" x="0.0" y="128" width="128" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="MaJ-AJ-oU6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="do7-MC-3jd" secondAttribute="bottom" id="9zc-fj-uQ6"/>
-                <constraint firstItem="do7-MC-3jd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="YHW-rA-6zY"/>
-                <constraint firstItem="do7-MC-3jd" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="e7j-ge-Ti2"/>
-                <constraint firstAttribute="trailing" secondItem="do7-MC-3jd" secondAttribute="trailing" id="uFn-ac-Bh0"/>
+                <constraint firstAttribute="bottom" secondItem="7Vx-dU-ucm" secondAttribute="bottom" id="NvO-bU-HeR"/>
+                <constraint firstItem="7Vx-dU-ucm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ze7-ah-cse"/>
+                <constraint firstItem="7Vx-dU-ucm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lRG-Zq-kzF"/>
+                <constraint firstAttribute="trailing" secondItem="7Vx-dU-ucm" secondAttribute="trailing" id="nWq-hs-Wlz"/>
             </constraints>
+            <size key="customSize" width="128" height="157"/>
             <connections>
                 <outlet property="itemImageView" destination="do7-MC-3jd" id="3PJ-OC-uew"/>
+                <outlet property="itemNameLabel" destination="7p2-7W-1qJ" id="JJb-G2-PRo"/>
             </connections>
-            <point key="canvasLocation" x="10.687022900763358" y="-11.267605633802818"/>
+            <point key="canvasLocation" x="10.687022900763358" y="-15.140845070422536"/>
         </collectionViewCell>
     </objects>
 </document>
