--- a/SnareHelpDesk/View/TitleCollectionViewCell.xib
+++ b/SnareHelpDesk/View/TitleCollectionViewCell.xib
@@ -22,6 +22,9 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="do7-MC-3jd">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7p2-7W-1qJ">
                                 <rect key="frame" x="0.0" y="128" width="128" height="29"/>
@@ -31,8 +34,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </stackView>
                 </subviews>
             </view>
@@ -44,6 +53,9 @@
                 <constraint firstAttribute="trailing" secondItem="7Vx-dU-ucm" secondAttribute="trailing" id="nWq-hs-Wlz"/>
             </constraints>
             <size key="customSize" width="128" height="157"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="itemImageView" destination="do7-MC-3jd" id="3PJ-OC-uew"/>
                 <outlet property="itemNameLabel" destination="7p2-7W-1qJ" id="JJb-G2-PRo"/>
