--- a/SnareHelpDesk/View/TitleCollectionViewCell.xib
+++ b/SnareHelpDesk/View/TitleCollectionViewCell.xib
@@ -22,26 +22,18 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="do7-MC-3jd">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
-                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7p2-7W-1qJ">
-                                <rect key="frame" x="0.0" y="128" width="128" height="29"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="128" id="MaJ-AJ-oU6"/>
-                                </constraints>
+                                <rect key="frame" x="10" y="128" width="108" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
-                                </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
-                        </userDefinedRuntimeAttributes>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="7p2-7W-1qJ" secondAttribute="trailing" constant="10" id="Brt-sw-4mY"/>
+                            <constraint firstItem="7p2-7W-1qJ" firstAttribute="leading" secondItem="7Vx-dU-ucm" secondAttribute="leading" constant="10" id="aJs-eJ-OuZ"/>
+                        </constraints>
                     </stackView>
                 </subviews>
             </view>
